--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,22 +3,47 @@ body {
   padding: 0;
   box-sizing: border-box;
   background: #f6f6f6;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
+.container {
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 10px;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+  height: 100%;
+}
 .input {
   border-radius: 10px;
   padding: 10px;
-  border: 1px solid black;
+  outline: none;
+  border: none;
 }
 
 .form {
-  margin: 20px auto;
-  width: 400px;
-  border: 1px solid black;
   border-radius: 10px;
-  padding: 20px;
+  padding: 10px;
   background-color: #4444;
+  display: flex;
+  flex-direction: column;
+}
+/* .form div { */
+/*   width: 100%; */
+/* } */
+
+.btn {
+  margin-top: 10px;
+  border-radius: 10px;
+  padding: 10px;
+  outline: none;
+  border: none;
+  background-color: black;
+  color: white;
+  cursor: pointer;
 }
 
-.btn {}
+.btn[disabled] {
+  opacity: 0.7;
+  cursor: not-allowed;
+}
